codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_mixed.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: Elpis · provider openai · model gpt-5.6-sol · context 0% · tmp · feature/mixed-preview · Mixed preview thread
terminal title: tmp | Mixed preview thread | Tasks 0/0
